--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<title>HTML 5 complete</title>
+		<title>CUPCAKES</title>
 		<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
 		<script src="/static/scripts/jquery-1.4.2.min.js"></script>
 		<style>
