--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -1,17 +1,37 @@
-<!DOCTYPE html>
-<html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" >
 	<head>
-		<meta charset="utf-8" />
-		<title>CUPCAKES</title>
-		<!--[if IE]><script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+		<meta name="keywords" content="" />
+		<meta name="description" content="" />
+		<title>Sunlight Campaign Ad Monitor</title>
+		<link rel="stylesheet" href="/static/styles/main.css" type="text/css" media="screen" />
 		<script src="/static/scripts/jquery-1.4.2.min.js"></script>
-		<style>
-			article, aside, details, figcaption, figure, footer, header,
-			hgroup, menu, nav, section { display: block; }
-			fieldset.disabled { display: none; }
-		</style>
 	</head>
-	<body>
-		{% block content %}{% endblock %}
+	<body class="home">
+		<div id="headerWrapper">
+			<div id="header">
+				<h1><a href="/"><small>Sunlight</small><big>Campaign Ad Monitor</big></a></h1>
+				<form id="searchForm" action="." method="get">
+					<span class="tip">Search for ads, candidates or locations</span>
+					<input id="id_search" type="text" name="search"/>
+					<button class="searchBtn" type="submit">
+						<span>Go</span>
+					</button>
+				</form>
+				<div class="clear"></div>
+				<div id="feature">
+					<p>Be a campaign monitor, report political ads you've seen recently</p>
+				</div>	  
+			</div>
+			<div id="pageMain">
+				{% block content %}{% endblock %}
+				<div class="clear"></div>
+				<div id="footer">
+					<a id="sunlight" href="http://www.sunlightfoundation.com">Sunlight Foundation</a>
+					<p>Founded in 2006, the Sunlight Foundation is a non-partisan non-profit that uses cutting-edge technology and ideas to make government transparent and accountable. Visit <a href="http://www.sunligtfoundation.com">SunlightFoundation.com</a> to learn more.</p>
+				</div>
+			</div>
+		</div>
 	</body>
 </html>
