--- a/cupcakes/templates/browse.html
+++ b/cupcakes/templates/browse.html
@@ -1,27 +1,59 @@
 {% extends "base.html" %}
 
 {% block content %}
+<div id="fullColumn">
+	<h2>Search Results for: <span id="searchResult">&#8220;Kentucky&#8221;</span></h2>
+	<div id="filter">
+		<span id="filterInstructions">Not seeing the results you’re after, revise your search below</span>
+		<form action="." method="get">
+			<ul>
+				<li>
+					<label>Zip Code</label>
+					<input id="id_zip" type="text" name="zip"/>
+				</li>
+				<li>
+					<label>State</label>
+					<select id="id_state" name="state">
+						<option value="1">Kentucky</option>
+						<option value="1">Michigan</option>
+					</select>
+				</li>
+				<li>
+					<label>Candidate</label>
+					<input id="id_candidate" type="text" name="candidate"/>
+				</li>
+				<li>
+					<label>Sponsor</label>
+					<input id="id_sponsor" type="text" name="sponsor"/>
+				</li>
+				<li>
+					<button class="filterBtn" type="submit">
+						<span>Filter</span>
+					</button>
+				</li>
+			</ul>
+		</form>
+		<div class="clear"></div>
+	</div>
 	<table>
 		<thead>
-			<tr>
-				<th>Zip Code</th>
-				<th>State</th>
-				<th>Date Aired</th>
-				<th>Aired On</th>
-				<th>Position</th>
-				<th>Candidate</th>
-				<th>Sponsor</th>
+			<tr id="titles">
+				<th class="sort">Zip</th>
+				<th class="sort">State</th>
+				<th class="sort" id="dateAired">Date Aired</th>
+				<th class="sort">Station</th>
+				<th class="sort">Support</th>
+				<th class="sort">Candidate</th>
+				<th class="sort">Sponsor</th>
 				<th>Description</th>
 			</tr>
 		</thead>
 		<tbody>
 			{% for s in submissions %}
-				<tr class="{{ s.mediatype }}">
-					
-					<td class="zipcode">{{ s.candidate }}</td>
+				<tr class="{{ loop.cycle('even', 'odd') }} {{ s.mediatype }}">
+					<td class="zipcode">{{ s.zipcode }}</td>
 					<td class="state">{{ s.state }}</td>
 					<td class="date_aired">{{ s.date_aired }}</td>
-				
 					<td class="mediatype">
 						{% if s.mediatype == 'radio' %}
 							{{ s.radio_callsign }}
@@ -31,8 +63,7 @@
 							unknown
 						{% endif %}
 					</td>
-				
-					<td class="for_against">
+					<td class="for_against {{ s.for_against }}" title="{{ s.for_against }} candidate">
 						{% if s.for_against == 'for' %}
 							In support of candidate
 						{% elif s.for_against == 'against' %}
@@ -41,29 +72,43 @@
 							unknown
 						{% endif %}
 					</td>
-				
 					<td class="candidate">{{ s.candidate }}</td>
 					<td class="sponsor">{{ s.sponsor }}</td>
 					<td class="description">{{ s.description }}</td>
-				
 				</tr>
 			{% endfor %}
-		</tbody>
+		<tbody>
 	</table>
-	
+
 	{% if pager.page_start < pager.page_end %}Results {{ pager.page_start }} - {% else %}Result {% endif %}
 	{{ pager.page_end }} of {{ pager.total }}
-	
-	{% if pager.has_previous %}
-		{% if pager.previous_page == 1 %}
-			<a href="/browse{% if qs %}?{{ qs }}{% endif %}">previous</a>
-		{% else %}
-			<a href="/browse?page={{ pager.previous_page }}{% if qs %}&amp;{{ qs }}{% endif %}">previous</a>
+				
+	<div id="tableNav">
+
+		{% if pager.has_previous %}
+			{% if pager.previous_page == 1 %}
+				<a id="previous" href="/browse{% if qs %}?{{ qs }}{% endif %}">« Previous</a>
+			{% else %}
+				<a id="previous" href="/browse?page={{ pager.previous_page }}{% if qs %}&amp;{{ qs }}{% endif %}">« Previous</a>
+			{% endif %}
 		{% endif %}
-	{% endif %}
-	
-	{% if pager.has_next %}
-		<a href="/browse?page={{ pager.next_page }}{% if qs %}&amp;{{ qs }}{% endif %}">next</a>
-	{% endif %}
-	
+
+		<div id="pagination">
+			<span id="current">1</span>
+			<a href="#">2</a>
+			<a href="#">3</a>
+			<a href="#">4</a>
+			<a href="#">5</a>
+			<a href="#">6</a>
+		</div>
+
+		{% if pager.has_next %}
+			<div id="nextWrapper">
+				<a id="next" href="/browse?page={{ pager.next_page }}{% if qs %}&amp;{{ qs }}{% endif %}">Next »</a>
+			</div>
+		{% endif %}
+		
+	</div>
+</div>
+
 {% endblock %}
