--- a/cupcakes/templates/index.html
+++ b/cupcakes/templates/index.html
@@ -1,11 +1,18 @@
 {% extends "base.html" %}
 
+{% block feature %}
+	<div id="feature">
+		<p>Be a campaign monitor, report political ads you've seen recently</p>
+	</div>
+{% endblock %}
+
 {% block content %}
 
 	<div id="ltColumn">
 		<h2 id="reportingTitle">Start Reporting</h2>
 		{% include "form.html" %}
 	</div>
+	
 	<div id="rtColumn">
 		<h2 id="reportsTitle">Recent Reports</h2>
 		<ul id="recentReports">
