--- a/cupcakes/static/styles/main.css
+++ b/cupcakes/static/styles/main.css
@@ -85,6 +85,8 @@ button.searchBtn { width: 45px; height: 31px; background: url(../images/button_g
 .continueBtn { width: 134px; height: 31px; background: url(../images/button_continue.png) top left no-repeat; margin-left: 150px; margin-top: 40px; }
 .filterBtn { width: 84px; height: 31px; background: url(../images/button_filter.png) top left no-repeat; margin-top: 25px;}
 
+fieldset.final { display: none; }
+
 table { width: 940px; }
 tr#titles th { text-transform: uppercase; color: #1b0500; font-weight: bold; padding: 0 15px 15px; font-size: 105%;}
 th.sort { background: url(../images/sortArrows.png) left 4px no-repeat; padding-left: 15px;}
