--- a/cupcakes/templates/thanks.html
+++ b/cupcakes/templates/thanks.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block bodyclass %}about{% endblock %}
+
 {% block content %}
+
+	Return to <a href="#">{{ referrer }}</a>, <a href="#">browse submissions</a>, or <a href="#">submit another ad</a>.
+
 	
 {% endblock %}
