checkin for ali

--- a/cupcakes/templates/form.html
+++ b/cupcakes/templates/form.html
@@ -20,7 +20,7 @@
 		</button>
 	</fieldset>
 	<fieldset class="final">
-		<p>Please report the campaign ad aired on <span class="mediatype"></span> in <span class="zipcode"></span>.</p>
+		<!-- <p>Please report the campaign ad aired on <span class="mediatype"></span> in <span class="zipcode"></span>.</p> -->
 		<fieldset class="radio">
 			<ul>
 				<li>
