--- a/cupcakes/templates/index.html
+++ b/cupcakes/templates/index.html
@@ -67,13 +67,13 @@
 					
 					var fsFinal = $('fieldset.final');
 					
-					fsFinal.find('span.mediatype').html(mt);
-					fsFinal.find('span.zipcode').html(zip);
+					// fsFinal.find('span.mediatype').html(mt);
+					// fsFinal.find('span.zipcode').html(zip);
 					
 					$('fieldset.' + mt).show();
 					
-					$('fieldset.initial').hide();
-					fsFinal.show();
+					// $('fieldset.initial').hide();
+					fsFinal.slideDown();
 					
 				}
 				
