make search work

--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -11,9 +11,9 @@
 		<div id="headerWrapper">
 			<div id="header">
 				<h1><a href="/"><small>Sunlight</small><big>Campaign Ad Monitor</big></a></h1>
-				<form id="searchForm" action="." method="get">
+				<form id="searchForm" action="/search" method="post">
 					<span class="tip">Search for ads, candidates or locations</span>
-					<input id="id_search" type="text" name="search"/>
+					<input id="id_search" type="text" name="q"/>
 					<button class="searchBtn" type="submit">
 						<span>Go</span>
 					</button>
