--- a/cupcakes/templates/index.html
+++ b/cupcakes/templates/index.html
@@ -18,11 +18,13 @@
 		<ul id="recentReports">
 			{% for s in recent %}
 				<li>
-					<h3><a href="/browse?candidate={{ s.candidate }}">{{ s.candidate }}</a></h3>
-					<span class="state">{{ s.state }}</span>
+				    <div class="reportHeader">
+					    <h3><a href="/browse?candidate={{ s.candidate }}">{{ s.candidate }}</a></h3>
+					    <span class="state">{{ s.state }}</span>
+					</div>
 					<dl class="clear">
-						<dt>Sponsored by:</dt>
-						<dd>
+						<dt class="block">Sponsored by:</dt>
+						<dd class="sponsorDefinition">
 							<a href="/browse?sponsor={{ s.sponsor }}">{{ s.sponsor }}</a>
 							<span class="{{ s.for_against }}">{{ s.for_against|title }} Candidate</span>
 						</dd>
