big ol mess of fixes

--- a/cupcakes/templates/browse.html
+++ b/cupcakes/templates/browse.html
@@ -122,6 +122,7 @@
 {% endblock %}
 
 {% block scripts %}
+	<script src="/static/scripts/jquery.tablesorter.min.js"></script>
 	<script type="text/javascript">
 		$().ready(function() { 
 			$("#resultsTable").tablesorter({
