--- a/cupcakes/static/styles/main.css
+++ b/cupcakes/static/styles/main.css
@@ -96,9 +96,9 @@ button.searchBtn { width: 45px; height: 31px; background: url(../images/button_g
 .submitBtn { width: 122px; height: 38px; background: url(../images/button_submit.png) top left no-repeat; margin-left: 200px; margin-top: 40px;}
 .submitBtn:hover { background: url(../images/button_submit.png) left -38px no-repeat;}
 
-/*fieldset.final { display: none; }
+fieldset.final { display: none; }
 fieldset.radio { display: none; }
-fieldset.television { display: none; }*/
+fieldset.television { display: none; }
 
 table { width: 940px; }
 tr#titles th { text-transform: uppercase; color: #1b0500; font-weight: bold; padding: 0 15px 15px; font-size: 105%;}
