changes for IE6

--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -6,6 +6,7 @@
 		<meta name="description" content="" />
 		<title>Sunlight Campaign Ad Monitor</title>
 		<link rel="stylesheet" href="/static/styles/main.css" type="text/css" media="screen" />
+		<!--[if IE 6]><link rel="stylesheet" href="/static/styles/buggy.css" type="text/css" media="screen" /><![endif]-->
 	</head>
 	<body class="{% block bodyclass %}home{% endblock %}">
 		<div id="headerWrapper">
