--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -7,6 +7,7 @@
 		<title>Sunlight Campaign Ad Monitor</title>
 		<link rel="stylesheet" href="/static/styles/main.css" type="text/css" media="screen" />
 		<!--[if IE 6]><link rel="stylesheet" href="/static/styles/buggy.css" type="text/css" media="screen" /><![endif]-->
+		<!--[if IE 7]><link rel="stylesheet" href="/static/styles/buggy7.css" type="text/css" media="screen" /><![endif]-->
 	</head>
 	<body class="{% block bodyclass %}home{% endblock %}">
 		<div id="headerWrapper">
