changes to make input boxes a little more obvious

--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -14,8 +14,8 @@
 			<div id="header">
 				<h1><a href="/"><small>Sunlight</small><big>Campaign Ad Monitor</big></a></h1>
 				<form id="searchForm" action="/search" method="post">
-					<span class="tip">Search for ads, candidates or locations</span>
-					<input id="id_search" type="text" name="q"/>
+					<span class="tip">Find ads, candidates or locations</span>
+					<input id="id_search" type="text" value="Search Now" name="q"/>
 					<button class="searchBtn" type="submit">
 						<span>Go</span>
 					</button>
