--- a/cupcakes/static/styles/main.css
+++ b/cupcakes/static/styles/main.css
@@ -31,8 +31,10 @@ form#searchForm span.tip { font-family: Georgia, "Times New Roman", Times, serif
 form#searchForm { float: right; padding-top: 28px;}
 form#searchForm input { float: left;}
 
-input, textarea { background-color: #ecebea; border: 1px solid #b2b2b2; -moz-border-radius: 3px; -webkit-border-radius: 3px; padding: 5px 10px; color: #706a67;}
-input#id_search { background: url(../images/bg_search.png) top left no-repeat; width: 183px; height: 22px; border: none; margin-right: 15px;}
+input, textarea { background: #f1f1f1 url(../images/bg_input.png) bottom left repeat-x; border: 1px solid #b2b2b2; -moz-border-radius: 3px; -webkit-border-radius: 3px; padding: 5px 10px; color: #706a67; }
+input:focus, textarea:focus { background: #f6f6f6 url(../images/bg_input.png) bottom left repeat-x; border: 1px solid #9f9e9e; }
+input, textarea, select { text-transform: capitalize; }
+input#id_search { background: url(../images/bg_search.png) top left no-repeat; width: 183px; height: 22px; border: none; margin-right: 10px; color: #a19995; font-size: 110%; font-family: Georgia, "Times New Roman", Times, serif;}
 
 div#feature { background: url(../images/feature_text.png) top center no-repeat; width: 573px; height: 109px; text-indent: -9999em; display: block; margin: 140px auto;}
 div#pageMain { width: 960px; margin: 0 auto; padding: 0 10px;}
