--- a/cupcakes/templates/form.html
+++ b/cupcakes/templates/form.html
@@ -38,6 +38,7 @@
 				<li>
 					{{ form.tv_channel.label }}
 					{{ form.tv_channel }}
+					{{ form.tv_channel_other }}
 				</li>
 			</ul>
 		</fieldset>
