adding about and use pages

--- a/cupcakes/templates/base.html
+++ b/cupcakes/templates/base.html
@@ -26,6 +26,13 @@
 			<div id="pageMain">
 				{% block content %}{% endblock %}
 				<div class="clear"></div>
+				<div id="footerNav">
+				    <ul>
+				        <li id="about"><a href="/about">About</a></li>
+				        <li><a href="/use">Use our ads</a></li>
+				    </ul> 
+				    <div class="clear"></div>   
+				</div>    
 				<div id="footer">
 					<a id="sunlight" href="http://www.sunlightfoundation.com">Sunlight Foundation</a>
 					<p>Founded in 2006, the Sunlight Foundation is a non-partisan non-profit that uses cutting-edge technology and ideas to make government transparent and accountable. Visit <a href="http://www.sunligtfoundation.com">SunlightFoundation.com</a> to learn more.</p>
