--- a/cupcakes/static/styles/main.css
+++ b/cupcakes/static/styles/main.css
@@ -31,6 +31,8 @@ form#searchForm span.tip { font-family: Georgia, "Times New Roman", Times, serif
 form#searchForm { float: right; padding-top: 28px;}
 form#searchForm input { float: left;}
 
+.tip { font-family: Georgia, "Times New Roman", Times, serif; margin-bottom: 30px; font-style: oblique; display: block;}
+
 input, textarea { background: #f1f1f1 url(../images/bg_input.png) bottom left repeat-x; border: 1px solid #b2b2b2; -moz-border-radius: 3px; -webkit-border-radius: 3px; padding: 5px 10px; color: #706a67; }
 input:focus, textarea:focus { background: #f6f6f6 url(../images/bg_input.png) bottom left repeat-x; border: 1px solid #9f9e9e; }
 input, textarea, select { text-transform: capitalize; }
@@ -48,6 +50,7 @@ body.home div#rtColumn { padding-top: 40px; width: 360px;}
 div#ltColumn { float: left; margin-right: 30px; width: 360px;}
 div#rtColumn { float: left; margin-left: 30px; width: 470px;}
 
+body.description div#ltColumn { width: 580px; }
 
 h2 { margin-bottom: 30px; text-transform: uppercase; color: #1b0500; font-size: 200%; font-weight: bold;}
 h2#reportingTitle { text-indent: -9999em; display: block; width: 234px; height: 20px; background: url(../images/text_reporting.png) top left no-repeat;}
@@ -133,7 +136,15 @@ td.against { background: url(../images/icon_against.png) center center no-repeat
 strong { font-weight: bold;}
 p { margin-bottom: 1em;}
 
-div#footer { background: url(../images/footer.jpg) top center no-repeat; height: 81px; padding: 30px 60px 0px; margin-bottom: 40px; margin-top: 70px;}
+ul#ads h3 { display: block; float: none;}
+ul#ads li { float: left; margin: 0 50px 30px 0;}
+
+#footerNav { margin: 0 auto; width: 200px; margin-top: 70px; text-align: center;}
+#footerNav li { float: left;  text-transform: uppercase; font-size: 110%;}
+#footerNav li a { text-decoration: none; }
+#footerNav li#about { margin-right: 40px; }
+
+div#footer { background: url(../images/footer.jpg) top center no-repeat; height: 81px; padding: 30px 60px 0px; margin-bottom: 40px; margin-top: 10px;}
 div#footer a { color: #c5c4c3;}
 a#sunlight { background: url(../images/logo_sunlight.png) top left no-repeat; width: 130px; height: 58px; text-indent: -9999em; display: block; float: left; margin-right: 45px; border-right: 1px solid #3b3532; padding: 10px 45px 10px 0;}
 div#footer p{ color: #c5c4c3; float: left; width: 615px; font-size: 95%; margin-top: 12px;}
