--- a/cupcakes/templates/form.html
+++ b/cupcakes/templates/form.html
@@ -68,6 +68,10 @@
 				{{ form.candidate }}
 			</li>
 			<li>
+				{{ form.issue.label }}
+				{{ form.issue }}
+			</li>
+			<li>
 				{{ form.description.label }}
 				{{ form.description }}
 			</li>
